trunk/Archive2/ff/51d4b9b7265308/output
main.cpp:13:19: error: declaration of 'using A = struct A<T>' [-fpermissive]
     using A = A<T>;
                   ^
main.cpp:7:8: error: changes meaning of 'A' from 'struct A<T>' [-fpermissive]
 struct A
        ^
main.cpp: In function 'int main()':
main.cpp:18:12: warning: unused variable 'b' [-Wunused-variable]
     B<int> b;
            ^
